--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Social Solutions Services</title>
 </head>
-
-<body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+<header>
+    <!-- This is the header at the top of the page -->
+    <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
                 <li>
@@ -23,25 +22,27 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine Optimization" />
+</header>
+<body>
+    <!-- this is the body of the page that contains the different subject boxes-->
+    <div class="hero" alt="individuals in a meeeting"></div>
+        <div class="content">
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Optimization elements written on a notepad beside a laptop" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation Management" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop showing a graph of icreased reputation" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left"  alt="social media marketing"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left"  alt="different social media cards on a table during a meeting"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -65,18 +66,20 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt=""></img>
+            <img src="./assets/images/cost-management.png" alt="" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
-    <div class="footer">
+</body>
+<footer>
+    <!-- this is the bottom of the page-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+        &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
-</body>
+</footer>   
 
 </html>
