--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en-us">
 
 <head>
+<!-- Company name that is seen on the tab of the web browser-->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Social Solutions Services</title>
 </head>
 <header>
-    <!-- This is the header at the top of the page -->
+    <!-- The header contains the company name and links to elements that are located further down the page -->
     <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,7 +25,7 @@
         </div>
 </header>
 <body>
-    <!-- this is the body of the page that contains the different subject boxes-->
+    <!-- the body contains the informative elements from the left side of the page-->
     <div class="hero" alt="individuals in a meeeting"></div>
         <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
@@ -49,6 +50,7 @@
             </p>
         </div>
     </div>
+    <!-- this area contains the bullet point information from the right side box-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -74,7 +76,7 @@
     </div>
 </body>
 <footer>
-    <!-- this is the bottom of the page-->
+    <!-- this area is the bottom portion of the page-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
         &copy; 2019 Horiseon Social Solution Services, Inc.
